--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
@@ -42,6 +43,9 @@
     "babel-register": "^6.11.6",
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
+    "eslint": "^3.3.1",
+    "eslint-plugin-mocha": "^4.3.0",
+    "eslint-plugin-react": "^6.1.1",
     "jsdom": "^9.4.2",
     "mocha": "^3.0.2",
     "mocha-webpack": "^0.6.0",
