Ignore config files for linting

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:watch": "webpack --config webpack.config.js --watch --progress",
     "test": "mocha-webpack",
     "test:debug": "node $NODE_DEBUG_OPTION --expose_debug_as=v8debug ./node_modules/mocha-webpack/bin/mocha-webpack",
-    "test:watch": "mocha-webpack --watch"
+    "test:watch": "mocha-webpack --watch",
+    "lint": "eslint src/*.jsx test/*.jsx"
   },
   "repository": {
     "type": "git",
