Fix eslint configuration and remaining warnings

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,8 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "react/jsx-uses-react": "error",
+        "react/jsx-uses-vars": "error"
     }
 }
