--- a/package.json
+++ b/package.json
@@ -30,29 +30,29 @@
   },
   "homepage": "https://github.com/kayak/react-tisch#readme",
   "dependencies": {
-    "react": "^15.3.0",
-    "react-bootstrap": "^0.30.2",
-    "react-dom": "^15.3.0"
+    "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
+    "react-dom": "^15.4.1"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-class-properties": "^6.11.5",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-register": "^6.11.6",
+    "babel-cli": "^6.18.0",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.9",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-object-rest-spread": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-register": "^6.18.0",
     "chai": "^3.5.0",
-    "enzyme": "^2.4.1",
-    "eslint": "^3.3.1",
-    "eslint-plugin-mocha": "^4.3.0",
-    "eslint-plugin-react": "^6.1.1",
-    "jsdom": "^9.4.2",
-    "mocha": "^3.0.2",
-    "mocha-webpack": "^0.6.0",
-    "react-addons-test-utils": "^15.3.0",
-    "webpack": "^1.13.1",
-    "webpack-node-externals": "^1.3.3"
+    "enzyme": "^2.6.0",
+    "eslint": "^3.11.1",
+    "eslint-plugin-mocha": "^4.7.0",
+    "eslint-plugin-react": "^6.8.0",
+    "jsdom": "^9.8.3",
+    "mocha": "^3.2.0",
+    "mocha-webpack": "^0.7.0",
+    "react-addons-test-utils": "^15.4.1",
+    "webpack": "^1.14.0",
+    "webpack-node-externals": "^1.5.4"
   }
 }
